--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+python==3.9.7
 joblib==1.1.0
 numpy==1.20.3
-pandas
+pandas==1.3.4
 Pillow==9.0.1
 plotly==5.6.0
+ray==1.9.2
 requests==2.26.0
 streamlit==1.7.0
 mlflow
